crates/vencord_ast_parser/src/tests/snapshots/vencord_ast_parser__tests__inline_string_raw.snap
---
source: crates/vencord_ast_parser/src/tests/mod.rs
expression: patches
---
[
  Patch(
    plugin_id: None,
    all: false,
    no_warn: false,
    find: MatchLike(
      v: Str(FinderDef(
        needle: "/^```(?:([a-z0-9_+\\-.#]+?)\\n)?\\n*([^\\n][^]*?)\\n*```",
      )),
      s: {
        "start": 147,
        "end": 210,
      },
    ),
    replacement: [
      Replacement(
        match_: MatchLike(
          v: Str(FinderDef(
            needle: "/^```(?:([a-z0-9_+\\-.#]+?)\\n)?\\n*([^\\n][^]*?)\\n*```",
          )),
          s: {
            "start": 272,
            "end": 335,
          },
        ),
        replace: ReplaceLike(
          v: Str("$0\\n?"),
          s: {
            "start": 362,
            "end": 370,
          },
          used_replace_capture_spans: [
            [
              {
                "start": 363,
                "end": 365,
              },
            ],
          ],
        ),
        no_warn: false,
      ),
    ],
    span: {
      "start": 117,
      "end": 396,
    },
  ),
]
