crates/vencord_ast_parser/src/tests/snapshots/vencord_ast_parser__tests__replace_simple_arrow_func.snap
---
source: crates/vencord_ast_parser/src/tests/mod.rs
expression: patches
---
[
  Patch(
    plugin_id: None,
    all: false,
    no_warn: false,
    find: MatchLike(
      v: Str(FinderDef(
        needle: "Unexpected value for option",
      )),
      s: {
        "start": 136,
        "end": 165,
      },
    ),
    replacement: [
      Replacement(
        match_: MatchLike(
          v: Regex(MatchRegex(
            pattern: ",((?:[A-Za-z_$][\\w$]*))\\.execute\\(((?:[A-Za-z_$][\\w$]*)),((?:[A-Za-z_$][\\w$]*))\\)",
            flags: RegExpFlagsDef(
              bits: 0,
            ),
            capture_spans: [
              {
                "start": 219,
                "end": 223,
              },
              {
                "start": 234,
                "end": 238,
              },
              {
                "start": 239,
                "end": 243,
              },
            ],
          )),
          s: {
            "start": 217,
            "end": 246,
          },
        ),
        replace: ReplaceLike(
          v: Template(TemplateEvaluator(
            lits: [
              ",Vencord.Api.Commands._handleCommand(",
              ", ",
              ", ",
              ")",
            ],
            captures: [
              1,
              2,
              3,
            ],
          )),
          s: {
            "start": 273,
            "end": 359,
          },
          used_replace_capture_spans: [
            [
              {
                "start": 274,
                "end": 275,
              },
            ],
            [
              {
                "start": 277,
                "end": 280,
              },
              {
                "start": 336,
                "end": 339,
              },
            ],
            [
              {
                "start": 282,
                "end": 286,
              },
              {
                "start": 344,
                "end": 348,
              },
            ],
            [
              {
                "start": 288,
                "end": 291,
              },
              {
                "start": 353,
                "end": 356,
              },
            ],
          ],
        ),
        no_warn: false,
      ),
    ],
    span: {
      "start": 116,
      "end": 383,
    },
  ),
]
