crates/vencord_ast_parser/src/tests/snapshots/vencord_ast_parser__tests__template_literal_replace.snap
---
source: crates/vencord_ast_parser/src/tests/mod.rs
expression: patches
---
[
  Patch(
    plugin_id: None,
    all: false,
    no_warn: false,
    find: MatchLike(
      v: Str(FinderDef(
        needle: "disableArrowKeySeek:!0",
      )),
      s: {
        "start": 410,
        "end": 434,
      },
    ),
    replacement: [
      Replacement(
        match_: MatchLike(
          v: Regex(MatchRegex(
            pattern: "useFullWidth:!0,shouldLink:",
            flags: RegExpFlagsDef(
              bits: 0,
            ),
            capture_spans: [],
          )),
          s: {
            "start": 508,
            "end": 537,
          },
        ),
        replace: ReplaceLike(
          v: Str("id:\"vc-imgzoom-magnify-modal\",$0"),
          s: {
            "start": 568,
            "end": 591,
          },
          used_replace_capture_spans: [
            [
              {
                "start": 599,
                "end": 601,
              },
            ],
          ],
        ),
        no_warn: false,
      ),
    ],
    span: {
      "start": 390,
      "end": 634,
    },
  ),
]
